--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -83,18 +83,18 @@
                                             placeholder="Ingresa el número telefonico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
-                                        <label for="correoInput" class="form-label ">Correo Electronico</label>
-                                        <input type="text" class="form-control" id="correoInput"
+                                        <label for="correoInput" class="form-label ">Correo electrónico</label>
+                                        <input type="email" class="form-control" id="correoInput"
                                             placeholder="Ingresa el correo electronico" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="fechanInput" class="form-label ">Fecha de Nacimiento</label>
-                                        <input type="text" class="form-control" id="fechanInput"
+                                        <input type="date" class="form-control" id="fechanInput"
                                             placeholder="Ingresa la fecha de nacimiento" required>
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="fecharInput" class="form-label">Fecha de Registro</label>
-                                        <input type="text" class="form-control" id="fecharInput" placeholder="21/2/2024"
+                                        <input type="date" class="form-control" id="fecharInput" placeholder="21/2/2024"
                                             required>
                                     </div>
                                     <div class="col-md-6 mt-3">
@@ -110,7 +110,7 @@
                                     </div>
                                     <div class="col-md-6 mt-3">
                                         <label for="contraInput" class="form-label ">Contraseña</label>
-                                        <input type="text" class="form-control" id="contraInput"
+                                        <input type="password" class="form-control" id="contraInput"
                                             placeholder="Ingresa la contraseña" required>
                                     </div>
                                     <div class="contenedorBotones2">
@@ -218,7 +218,7 @@
                                 <!--Campo del correo electrónico del trabajador-->
                                 <div class="col-sm-12 col-md-6">
                                     <label for="correoTrabajador" class="form-label">Correo electrónico</label>
-                                    <input id="correoTrabajador" type="text" name="correoTrabajador"
+                                    <input id="correoTrabajador" type="email" name="correoTrabajador"
                                         class="form-control editableInput" required>
                                 </div>
                                 <!--Campo del fecha de nacimietno del trabajador-->
