--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -147,7 +147,7 @@
                         </div>
                         <div class="tab-pane fade show z-3 d-none" role="tabpanel" id="colores"
                         aria-labelledby="colores-tab">
-                        <div class="ContenedorB">
+                        <div class="ContenedorB1">
 
                             <div class="ContenedorTotalA d-flex flex-column align-items-center">
     
