--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -29,7 +29,7 @@
     <div id="slide"></div> <!--* Elemento de Plantilla-->
     <main id="mainContent"> <!--* Elemento de Plantilla-->
         <div class="ContenedorT"> <!--contenedor de todo-->
-            <div class="ContenedorTitulo position-relative">  <!--contenedor del titulo y su linea de debajo-->
+            <div class="ContenedorTitulo position-relative"> <!--contenedor del titulo y su linea de debajo-->
                 <h3 class="titillium-web-semibold textP">Comentarios</h3>
                 <div class="linea1"></div>
             </div>
@@ -43,58 +43,57 @@
                                     document.querySelector('.ComentarioC').addEventListener('click', function () {
                                         ShowComentario(this);
                                     });
-                                </script>
+                                </script> <!--Contenedor de Comentario con evento para pasar a Detalle Comentario-->
                                 <h5 class="comentarioT">Emilianito</h5>
                                 <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
-                            </div>
+                            </div><!--Contenido del Comentario-->
 
-                            <div class="sizedbox"></div>
+                            <div class="sizedbox"></div> <!--Clase para darle una separacion a los Comentarios-->
                             <div class="ComentarioC">
                                 <h5 class="comentarioT">Emilianito</h5>
                                 <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
-                            </div>
+                            </div> <!--Contenido del Comentario-->
 
-                            <div class="sizedbox"></div>
+                            <div class="sizedbox"></div> <!--Clase para darle una separacion a los Comentarios-->
                             <div class="ComentarioC">
                                 <h5 class="comentarioT">Emilianito</h5>
                                 <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
-                            </div>
+                            </div> <!--Contenido del Comentario-->
 
-                            <div class="sizedbox"></div>
+                            <div class="sizedbox"></div> <!--Clase para darle una separacion a los Comentarios-->
                             <div class="ComentarioC">
                                 <h5 class="comentarioT">Emilianito</h5>
                                 <p class="comentarioD">El mejor pollo, es del pollo campero!</p>
-                            </div>
+                            </div> <!--Contenido del Comentario-->
 
                         </div>
                     </div>
                 </div>
 
             </div>
-
+            <!--PAGINA DE DETALLE COMENTARIO-->
             <div class="nav-link rectanguloP1 z-0 d-flex flex-column d-none " id="rectanguloP1">
-
                 <div class="d-flex flex-row flex-wrap contenedorElemento1 justify-content-between">
                     <div class="container p-0 m-0">
                         <button class="btn" type="button" onclick="volver()">
                             <img src="/recursos/imagenes/flecha.png" width="25px" height="30px">
-                        </button>
+                        </button> <!--Boton para volver a la pagina de comentarios-->
                     </div>
                     <div
                         class="d-flex flex-column justify-content-center flex-wrap mx-5 me-5 ms-5 mb-2 contenedorInfoCliente">
-                        <h3 class="fw-normal titillium-web-regular mb-5 color-4blue">Información del comentario</h3>
+                        <h3 class="fw-normal titillium-web-regular mb-5 color-4blue">Información del comentario</h3> <!--Contenedor de la informacion de Cliente-->
                         <p class="titillium-web-regular">
                             <span class="fw-bold">
                                 Nombre del cliente:
                             </span> Emilianito
-                        </p>
+                        </p> <!--Informacion del Cliente-->
 
                         <p class=" titillium-web-regular">
                             <span class="fw-bold">
                                 Correo del cliente:
                             </span>
                             Emilianito@gmail.com
-                        </p>
+                        </p><!--Informacion del Cliente-->
 
                         <p class="titillium-web-regular">
                             <span class="fw-bold">
@@ -102,74 +101,35 @@
                             </span>
                             1234-5678
                         </p>
-                    </div>
+                    </div> <!--Informacion del Cliente-->
 
                     <div class="d-flex flex-column contedorDataZapato flex-wrap">
 
-                        <div class="detalleZapato d-flex flex-column flex-wrap justify-content-evenly">
+                        <div class="detalleZapato d-flex flex-column flex-wrap justify-content-evenly"> <!--Contenedor para mostrar el producto comentado--> 
                             <h5 class="titillium-web-extralight color-3blue"> Producto Comentado</h5>
                             <img src="../../recursos/imagenes/zapato.png" alt="zapatoC" class="">
                             <p class=" m-0 fw-semi-bold">Nike Dunk Low</p>
                             <p class="m-0">Zapato Unisex</p>
                             <p class="m-0">2 Colores</p>
                             <p class=" m-0 fw-bold">$185</p>
-                        </div>
+                        </div> <!--Informacion total del zapato comentado-->
                     </div>
                 </div>
-
+                <!--Descripcion del comentario--> 
                 <div class="d-flex flex-column contenedorElemento2 flex-wrap justify-content-center align-items-center">
                     <div class="d-flex flex-column flex-wrap contenedorComentario">
                         <h6 class="titillium-web-semibold color-3blue">Descripcion del comentario:</h6>
                         <p class=""> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
                             muy comodo, lo recomiendo para
                             fiestas por que es muy elegante.
-                        </p>
+                        </p> 
+                        <!--Boton para retirar comentario--> 
                         <div class="container p-0 m-0 mt-4">
                             <button type="button" class="btn btn1 btn-primary">Retirar comentario</button>
                         </div>
                     </div>
                 </div>
-
-                <!-- <div class="DetalleProducto">
-                <h9 class="PD titillium-web-extralight"> Producto Comentado</h9>
-                <img src="../../recursos/imagenes/zapato.png" alt="zapatoC" class="zapatoC">
-                <p class="DC fw-semi-bold">Nike Dunk Low</p>
-                <p class="DC1">Zapato Unisex</p>
-                <p class="DC2">2 Colores</p>
-                <p class="DC3 fw-bold">$185</p>
             </div>
-
-            <h3 class="InfoC fw-normal">Información del comentario</h3>
-            <p class="C1 titillium-web-regular">
-                <span class="fw-bold">
-                    Nombre del cliente:
-                </span> Emilianito
-            </p>
-
-            <p class="C2 titillium-web-regular">
-                <span class="fw-bold">
-                    Correo del cliente:
-                </span>
-                Emilianito@gmail.com
-            </p>
-            <p class="C3 titillium-web-regular">
-                <span class="fw-bold">
-                    Teléfono del cliente:
-                </span>
-                1234-5678
-            </p>
-            <div class="ComentarioDetalle ">
-                <h8 class="CT1 titillium-web-semibold">Descripcion del comentario:</h8>
-                <p class="Comentario"> Un zapato que la verdad recomiendo mucho, me gustan sus colores y es
-                    muy comodo, lo recomiendo para
-                    fiestas por que es muy elegante.
-                </p>
-                <div class="contenedor-boton">
-                    <button type="button" class="btn btn-primary">Retirar comentario</button>
-                </div>
-            </div>-->
-            </div>
-
         </div>
     </main>
     <footer id="footer"></footer> <!--* Elemento de Plantilla-->
