--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -125,7 +125,10 @@
                         </p> 
                         <!--Boton para retirar comentario--> 
                         <div class="container p-0 m-0 mt-4">
-                            <button type="button" class="btn btn1 btn-primary">Retirar comentario</button>
+                            <button type="button" class="btn btn1 btn-primary" id="btnRetirar"
+                            onclick="RetirarC()">
+                        Retirar comentario
+                    </button>
                         </div>
                     </div>
                 </div>
