--- a/vistas/privado/pedidos.html
+++ b/vistas/privado/pedidos.html
@@ -204,9 +204,9 @@
                                                                             <!--Contenedor para las card de pedidos-->
                                                                             <!--!NUEVOS PEDIDIOS-->
                                                                             <div id="cardsDeNuevosPedidos"
-                                                                                class="mt-4 col-lg-12 d-none">
+                                                                                class="mt-4 col-lg-12 d-none d-flex flex-column">
                                                                                 <div
-                                                                                    class="offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
+                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
                                                                                     <img id="imagenPedido"
                                                                                         src="../../recursos/imagenes/icons/notebook.svg"
                                                                                         class="img-fluid mt-3 mb-3 me-1 ms-1"
@@ -461,11 +461,11 @@
                                                                                         onclick="regresar()">Regresar</button>
                                                                                 </div>
                                                                             </div>
-                                                                            <!--Pedidos en progreso-->
+                                                                            <!--!Pedidos en progreso-->
                                                                             <div id="cardsDePedidosProgreso"
                                                                                 class="mt-4 col-lg-12 d-none">
                                                                                 <div
-                                                                                    class="offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
+                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
                                                                                     <img id="imagenPedido"
                                                                                         src="../../recursos/imagenes/icons/camion.svg"
                                                                                         class="img-fluid mt-3 mb-3 me-1 ms-1"
@@ -720,11 +720,11 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
-                                                                            <!--Apartado de entregado-->
+                                                                            <!--!Apartado de entregado-->
                                                                             <div id="cardsDePedidosEntregado"
                                                                                 class="mt-4 col-lg-12 d-none">
                                                                                 <div
-                                                                                    class="offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
+                                                                                    class="contenedorDeNuevosPedidosImagenTexto offset-lg-2 col-lg-8 bg-color-1blue d-flex justify-content-center align-items-center rounded-3">
                                                                                     <img id="imagenPedido"
                                                                                         src="../../recursos/imagenes/icons/entregado.svg"
                                                                                         class="img-fluid mt-3 mb-3 me-1 ms-1"
