--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -141,7 +141,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador de la página web -->
     <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
     <script type="text/javascript" src="../../controlador/privado/comentario.js"></script>
+    <!--*Libreria de mensajes-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 
 </html>
