--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -81,7 +81,7 @@
                                 <div class="input-group">
                                     <span class="input-group-text">Descripción de la marca</span>
                                     <textarea class="form-control" aria-label="With textarea"
-                                        id="descripcionMarca"></textarea>
+                                        id="descripcionMarca" required></textarea>
                                 </div>
                             </div>
                             <!-- Contenedor de la imagen de la marca -->
@@ -160,7 +160,7 @@
                             <div class="input-group">
                                 <span class="input-group-text">Descripción de la marca</span>
                                 <textarea class="form-control" aria-label="With textarea" id="descripcionMarcaD"
-                                    readonly></textarea>
+                                    readonly required></textarea>
                             </div>
 
                             <!-- Contenedor de la imagen de la marca -->
