--- a/vistas/privado/index.html
+++ b/vistas/privado/index.html
@@ -23,7 +23,6 @@ TODO importante // realtando algo
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada al hoja de estilo css -->
     <link href="../../recursos/estilos/privado/index.css" rel="stylesheet">
@@ -123,7 +122,7 @@ TODO importante // realtando algo
                                             class="form-label titillium-web-regular">Correo
                                             electrónico</label>
                                     </div>
-                                    <input id="correo_electronico_paso1" type="email" name="correo_electronico"
+                                    <input id="correo_electronico_paso1" type="email" name="correo_electronico_paso1"
                                         class="form-control titillium-web-regular"
                                         placeholder="pollo.camperosv@gmail.com" style="border-color: #146A93;" required>
                                 </div>
@@ -154,7 +153,7 @@ TODO importante // realtando algo
                     <div class="col-sm-8 offset-sm-2">
                         <!--Comienzo del formulario del paso 2 del restablecimiento de contraseña -->
                         <form class="d-none bg-light rounded-5 p-3" style="border-color: #146A93;"
-                            id="forgetpasswordsteptwo">
+                            id="forgetpasswordsteptwo" onsubmit="showLoginForm(event)">
                             <div class="my-3"></div>
                             <!--Contenedor del texto y indicaciones del codigo de verificacion-->
                             <div
@@ -224,7 +223,7 @@ TODO importante // realtando algo
                                             class="form-label titillium-web-regular">Contraseña</label>
                                     </div>
                                     <!--Contenedor del input de contraseña-->
-                                    <input id="clavePaso3" type="password" name="clave"
+                                    <input id="clavePaso3" type="password" name="clavePaso3"
                                         class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
                                         style="border-color: #146A93" required>
                                 </div>
@@ -238,7 +237,7 @@ TODO importante // realtando algo
                                             contraseña</label>
                                     </div>
                                     <!--Contenedor del input de contraseña-->
-                                    <input id="clave2_paso3" type="password" name="clave2"
+                                    <input id="clave2_paso3" type="password" name="clave2_paso3"
                                         class="form-control titillium-web-regular" placeholder="●●●●●●●●●●"
                                         style="border-color: #146A93" required>
                                 </div>
@@ -262,7 +261,6 @@ TODO importante // realtando algo
     <!-- *Llamada al framework de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador del sitio público -->
-    <!--<script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>-->
     <script type="text/javascript" src="../../controlador/privado/index.js"></script>
 </body>
 
