--- a/vistas/privado/detalles_usuario.html
+++ b/vistas/privado/detalles_usuario.html
@@ -159,8 +159,8 @@
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/detalles_usuario.js"></script>
 </body>
