--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -61,9 +61,9 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <!-- *Llamada al controlador general de la aplicación -->
-    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/panel_principal.js"></script>
 </body>
