--- a/vistas/privado/comentarios.html
+++ b/vistas/privado/comentarios.html
@@ -6,8 +6,6 @@
     <title></title>
     <!-- Metadatos de la página web -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
     <meta name="author" content="FeasVerseCompany">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- *IMPORTACIÓN DE RECURSOS EXTERNOS -->
@@ -16,7 +14,6 @@
     <!-- *Llamada a las hojas de estilos del framework -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <!-- *Llamada a las hojas de estilos propios de css -->
     <link href="../../recursos/estilos/fuentes.css" rel="stylesheet">
@@ -140,8 +137,8 @@
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
     <script type="text/javascript" src="../../controlador/privado/comentario.js"></script>
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
