--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -80,8 +80,8 @@
                                 <!-- Campo de ingreso de la descripción de la marca -->
                                 <div class="input-group">
                                     <span class="input-group-text">Descripción de la marca</span>
-                                    <textarea class="form-control" aria-label="With textarea"
-                                        id="descripcionMarca" required></textarea>
+                                    <textarea class="form-control" aria-label="With textarea" id="descripcionMarca"
+                                        required></textarea>
                                 </div>
                             </div>
                             <!-- Contenedor de la imagen de la marca -->
@@ -209,8 +209,8 @@
     <!--*Libreria de mensajes-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- *Llamada al controlador de la página web -->
-    <script type="text/javascript" src="../../controlador/utilidades(plantillas)/privado.js"></script>
-    <script type="text/javascript" src="/controlador/utilidades(plantillas)/componentes.js"></script>
+    <script type="text/javascript" src="../../controlador/utilidades/privado.js"></script>
+    <script type="text/javascript" src="/controlador/utilidades/componentes.js"></script>
     <!-- *Llamada al controlador del sitio privado -->
     <script type="text/javascript" src="../../controlador/privado/marcas.js"></script>
 </body>
